--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,33 @@
-body{
-    font-family: 'Roboto';
+body {
+  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .header {
 }
 .header-navigation {
 }
+.header-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.link {
+  text-decoration: none;
+}
+.header-list {
+}
+.list {
+  list-style: none;
+}
+.header-item {
+}
 .header-addres {
+}
+.header-adress-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
