--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,19 @@
+:root {
+  --color-iris: rgba(77, 90, 229);
+  --color-ocean: rgba(64, 75, 191);
+  --color-navy-blue: rgba(46, 47, 66);
+  --color-green: rgba(49, 208, 170);
+  --color-slate: rgba(67, 68, 85);
+  --color-light-slate: rgba(142, 143, 153);
+  --color-cornflower: rgba(231, 233, 252);
+  --color-cloud: rgba(244, 244, 253);
+  --color-navy-blue-modal: rgba(46, 47, 66);
+  --color-grey: rgba(46, 47, 66);
+  --color-white: rgba(255, 255, 255);
+  --color-dairy: rgba(252, 252, 252);
+}
 body {
-  font-family: "Raleway", sans-serif;
   font-family: "Roboto", sans-serif;
-  color:#434455;
-  background-color: #FFFFFF;
-}
-
-.header {
-}
-
-.header-navigation {
-}
-.header-link-logo{
-  
-}
-.header-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.link {
-  text-decoration: none;
-}
-.header-list {
-}
-.list {
-  list-style: none;
-}
-.header-item {
-}
-.header-addres {
-}
-.header-adress-link {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: #434455;
+  background-color: #ffffff;
 }
