--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
   --color-dairy: rgba(252, 252, 252);
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto" sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
