--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
 :root {
   --color-iris: rgba(77, 90, 229);
   --color-ocean: rgba(64, 75, 191);
@@ -11,9 +16,4 @@
   --color-grey: rgba(46, 47, 66);
   --color-white: rgba(255, 255, 255);
   --color-dairy: rgba(252, 252, 252);
-}
-body {
-  font-family: "Roboto" sans-serif;
-  color: #434455;
-  background-color: #ffffff;
 }
