--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@ body {
   background-color: #ffffff;
 }
 :root {
-  --main-title-color:  #2E2F42;
+  --main-title-color: #2e2f42;
   --second-title-color: #434455;
-  --therd-title-color: #4D5AE5 
+  --therd-title-color: #4d5ae5;
 }
 .list {
   list-style: none;
@@ -15,6 +15,8 @@ body {
 .link {
   text-decoration: none;
 }
+
+/* ------HEADER------ */
 
 .header {
 }
@@ -41,12 +43,15 @@ body {
   color: #2e2f42;
 }
 
-.header-list {
-}
-
-.header-item {
-}
 .header-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+}
+.header-link:hover {
+  color: #404bbf;
 }
 .header-address {
 }
