--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,8 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-title-color);
 }
-.header-link:hover {
+.header-link:hover,
+.header-link:focus {
   color: #404bbf;
 }
 .header-address {
