--- a/css/styles.css
+++ b/css/styles.css
@@ -54,11 +54,16 @@ body {
 .header-link:focus {
   color: #404bbf;
 }
-.header-address {
-}
-.header-address-list {
-}
-.header-address-item {
-}
+
 .header-address-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.header-address-link:hover,
+.header-address-link:focus {
+  color: #404bbf;
 }
