--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,9 @@ body {
 .header-link:focus {
   color: #404bbf;
 }
-
+.header-address{
+  font-style: normal 
+}
 .header-address-link {
   font-style: normal;
   font-weight: 400;
