--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,22 @@ body {
   letter-spacing: 0.02em;
   color: var(--second-title-color);
 }
+/* -----BENEFITS----- */
+.benefits {
+}
+.benefits-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--main-title-color);
+}
+.benefits-list {
+}
+.list {
+}
+.benefits-item {
+}
+
