--- a/css/styles.css
+++ b/css/styles.css
@@ -142,3 +142,37 @@ body {
 .benefits-item {
 }
 
+/* -----TEAM----- */
+
+.team {
+  background-color: #f4f4fd;
+}
+.team-top-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--main-title-color);
+}
+.team-list {
+  background-color: #ffffff;
+}
+.team-item {
+}
+.team-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--second-title-color);
+}
