--- a/css/styles.css
+++ b/css/styles.css
@@ -214,3 +214,74 @@ body {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+
+/* -----MAIN-NAV----- */
+.main-navigation {
+}
+.main-navigation-list {
+}
+
+/* -----MAIN-BTN----- */
+
+.main-navigation-top-btn {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  cursor: pointer;
+  background-color: #f4f4fd;
+}
+.main-navigation-top-btn:hover,
+.main-navigation-top-btn:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+}
+
+.main-navigation-btn {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  cursor: pointer;
+  background-color: #f4f4fd;
+}
+.main-navigation-btn:hover,
+.main-navigation-btn:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+}
+/* -----MAIN-LINK----- */
+.main-navigation-item {
+}
+.main-navigation-link {
+}
+.link {
+}
+
+.main-navigation-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.main-navigation-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
